# Core2-for-AWS-IoT-Kit

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  LICENSE  README.md  THIRD-PARTY-LICENSES.txt  core2foraws.c
Alexa_for_IoT-Intro/: CMakeLists.txt  Makefile  README.md  flash_certificates.py  m5stackcore2_idf.patch  partitions.csv  partitions_mkspiffs.csv  platformio.ini  sdkconfig.defaults
Alexa_for_IoT-Intro/components/: README-Additional-Components.md
Alexa_for_IoT-Intro/components/app_smart_home/: app_smart_home.c
Alexa_for_IoT-Intro/components/audio_hal/: CMakeLists.txt  va_dsp.c
Alexa_for_IoT-Intro/components/basic_player/: basic_player.h
Alexa_for_IoT-Intro/components/codecs/: CMakeLists.txt
Alexa_for_IoT-Intro/components/common/: app_wifi.c
Alexa_for_IoT-Intro/components/core2forAWS/: Kconfig  core2forAWS.c  core2forAWS.h
Alexa_for_IoT-Intro/components/esp-cryptoauthlib/: README.md
Alexa_for_IoT-Intro/components/esp-downmix/: CMakeLists.txt  component.mk
Alexa_for_IoT-Intro/components/esp-ssdp/: CMakeLists.txt  component.mk
Alexa_for_IoT-Intro/components/media_hal/: media_hal_playback.h
Alexa_for_IoT-Intro/components/misc/: CMakeLists.txt  alexa_logo.c  time_utils.h  va_button.c  va_button.h  va_diag_cli.c  va_led.h
Alexa_for_IoT-Intro/esp-va-sdk-core2foraws/: CHANGELOG.md  README.md
Alexa_for_IoT-Intro/esp_alexa_credentials/: README.md  mfg_config.csv
Alexa_for_IoT-Intro/main/: app_aws_iot.h  app_main.c  app_va_cb.c
Blinky-Hello-World/: CMakeLists.txt  Makefile  README.md  partitions_16MB.csv  platformio.ini  register_thing.py  sdkconfig.defaults
Blinky-Hello-World/main/: CMakeLists.txt  Kconfig.projbuild  blink.c  display.c  main.c  ui.c  wifi.c
Core2-for-AWS-IoT-EduKit-Factory-Firmware/: .gitignore  CMakeLists.txt  Makefile  sdkconfig.old
Core2-for-AWS-IoT-EduKit-Factory-Firmware/main/: CMakeLists.txt  main.c  sk6812_test.c  sk6812_test.h
Core2-for-AWS-IoT-EduKit-Features-Demo/: CMakeLists.txt  LICENSE.md  Makefile  README.md  sdkconfig.defaults
Core2-for-AWS-IoT-EduKit-Features-Demo/main/: CMakeLists.txt  atecc608a_test.c  atecc608a_test.h  main.c  mic_fft_test.c  sk6812_test.c
Factory-Firmware/: CMakeLists.txt  LICENSE.md  Makefile  README.md  platformio.ini  sdkconfig.defaults
Factory-Firmware/components/core2forAWS/tft/lvgl/: CMakeLists.txt  lv_conf.h
Factory-Firmware/main/: CMakeLists.txt  clock.c  crypto.c  cta.c  home.c  ledBarAnimation.c  led_bar.c  main.c  mic.c  mpu.c  power.c  sound.c  touch.c  wifi.c
Factory-Firmware/main/images/: color_map.c  core2forAWS_qr_code.c  gauge_hand.c  powered_by_aws_logo.c
Factory-Firmware/main/includes/: clock.h  crypto.h  cta.h  home.h  led_bar.h  mic.h  mpu.h  power.h  sound.h  touch.h  wifi.h
Getting-Started/: CMakeLists.txt  Makefile  README.md  platformio.ini  sdkconfig.defaults
Getting-Started/cli/: rainmaker.py
Getting-Started/components/esp-insights/components/esp_diagnostics/: CMakeLists.txt  Kconfig
Getting-Started/components/esp-insights/components/esp_diagnostics/include/: esp_diagnostics.h  esp_diagnostics_metrics.h  esp_diagnostics_network_variables.h  esp_diagnostics_system_metrics.h  esp_diagnostics_variables.h
Getting-Started/components/esp-insights/components/esp_diagnostics/src/: esp_diagnostics_heap_metrics.c  esp_diagnostics_log_hook.c  esp_diagnostics_metrics.c  esp_diagnostics_network_variables.c  esp_diagnostics_utils.c  esp_diagnostics_variables.c  esp_diagnostics_wifi_metrics.c
Getting-Started/components/esp-insights/components/esp_insights/: CMakeLists.txt  Kconfig  project_include.cmake
Getting-Started/components/esp-insights/components/esp_insights/include/: esp_insights.h
Getting-Started/components/esp-insights/components/esp_insights/scripts/: gen_tar_dir.cmake  get_projbuild_gitconfig.py
Getting-Started/components/esp-insights/components/esp_insights/src/: esp_insights.c  esp_insights_cbor_encoder.c  esp_insights_cbor_encoder.h  esp_insights_client_data.c  esp_insights_client_data.h  esp_insights_encoder.c  esp_insights_encoder.h  esp_insights_mqtt.c  esp_insights_mqtt.h
Getting-Started/components/esp-insights/components/rmaker_common/: CMakeLists.txt  Kconfig
Getting-Started/components/esp-insights/components/rmaker_common/src/esp-mqtt/: esp-mqtt-glue.c
Getting-Started/docs/: Doxyfile
Getting-Started/main/: CMakeLists.txt  app_driver.c  app_main.c  app_priv.h  display.c  display.h  fan.c  fan.h  fan_1.c  fan_2.c  fan_3.c  fan_4.c  fan_5.c  fan_6.c  fan_off.c  fan_spinning.c  house_off.c  house_on.c  hsv2rgb.c  hsv2rgb.h  light.c  light.h  temperature.c  temperature.h  thermometer.c
Getting-Started/src/: app_driver.c  app_main.c  display.c  display.h  fan.c  fan.h  fan_1.c  fan_2.c  fan_3.c  fan_4.c  fan_5.c  fan_6.c  fan_off.c  house_off.c  house_on.c  hsv2rgb.c  hsv2rgb.h  light.c  light.h  temperature.c  temperature.h  thermometer.c  user_parameters.h
Hardware-Features-Demo/: CMakeLists.txt  Makefile  README.md  platformio.ini  sdkconfig.defaults
Hardware-Features-Demo/main/: CMakeLists.txt  atecc608_test.c  main.c  mic_fft_test.c  mic_fft_test.h  sk6812_test.c
Hardware-Features-Demo/main/includes/: sk6812_test.h
Smart-Spaces/: README.md
Smart-Thermostat/: CMakeLists.txt  Makefile  README.md  input.json  platformio.ini  sdkconfig.defaults
Smart-Thermostat/main/: CMakeLists.txt  Kconfig.projbuild  display.c  main.c  ui.c  wifi.c
include/: core2foraws.h
lib/audio/: CMakeLists.txt  core2foraws_audio.c
lib/button/: CMakeLists.txt  Kconfig  core2foraws_button.c
lib/common/: CMakeLists.txt  core2foraws_common.c
lib/crypto/: CMakeLists.txt  LICENSE.txt  core2foraws_crypto.c
lib/display/: CMakeLists.txt  Kconfig  core2foraws_display.c
lib/expports/: CMakeLists.txt  Kconfig  core2foraws_expports.c
lib/motion/: CMakeLists.txt  core2foraws_motion.c
lib/power/: CMakeLists.txt  core2foraws_power.c
lib/rgb_led/: CMakeLists.txt  core2foraws_rgb_led.c
lib/rtc/: CMakeLists.txt  core2foraws_rtc.c
lib/sd/: core2foraws_sd.c
lib/wifi/: CMakeLists.txt  core2foraws_wifi.c
(+790 files in other folders)
