idf_component_register(SRCS
                       ./app_driver.c
                       ./app_main.c
                       ./fan.c
                       ./temperature.c
                       ./display.c
                       ./fan_spinning.c
                       ./fan_off.c
                       ./house_off.c
                       ./house_on.c
                       ./thermometer.c
                       ./hsv2rgb.c
                       ./light.c
                       INCLUDE_DIRS ".")
                       